fix text padding on mobile, made what our members say visible

--- a/mps_site/static/css/style.css
+++ b/mps_site/static/css/style.css
@@ -90,6 +90,8 @@ h4 {
 
 h3, h5 {
   text-align: center; 
+  padding-left: 10px;
+  padding-right: 10px;
   color: var(--text-color);
 }
 
